--- a/src/static/style.css
+++ b/src/static/style.css
@@ -1,6 +1,11 @@
-#color {
+#color-box {
     width: 100px;
     height: 100px;
+    border: 4px solid lightgray;
+}
+
+.inline {
+    display: inline;
 }
 
 input {
@@ -16,5 +21,5 @@ input {
 }
 
 .incorrect {
-    background-color: tomato;
+    background-color: lightgray;
 }
