fix marking partially correct guesses

--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -55,7 +55,9 @@
                     next.focus();
                 }
             }
-            else if (e.key === 'Backspace') 
+        }));
+        fields.forEach((field) => field.addEventListener('keydown', (e) => {
+            if (e.key === 'Backspace' && field.value === '')
             {
                 field.blur()
                 previous = field.previousElementSibling
