--- a/src/static/style.css
+++ b/src/static/style.css
@@ -3,14 +3,6 @@ html, body {
     height: 100vh;
 }
 
-.light {
-    color-scheme: light;
-}
-
-.dark {
-    color-scheme: dark;
-}
-
 .fill-screen {
     background-color: light-dark(white, var(--bs-gray-900));
 }
@@ -20,7 +12,6 @@ html, body {
     flex-direction: column;
     align-items: center;
     text-align: center;
-    /* background-color: light-dark(white, var(--bs-gray-800)); */
 }
 
 #color-box {
@@ -74,9 +65,9 @@ input:focus-visible {
 }
 
 .incorrect {
-    background-color: var(--bs-gray-600);
+    background-color: light-dark(var(--bs-gray-600), var(--bs-gray-700));
     color: white;
-    border-color: var(--bs-gray-600);
+    border-color: light-dark(var(--bs-gray-600), var(--bs-gray-700));
 }
 
 #toolbar > h1, p {
@@ -120,8 +111,10 @@ button {
 }
 
 #toolbar {
+    width: 100%;
     display: flex;
-    justify-content: space-evenly;
+    justify-content: center;
+    gap: 0rem;
 }
 
 #settings-container {
