--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -9,7 +9,7 @@
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
     </head>
-    <body class="fill-screen {% if dark_mode %}dark{% else %}light{% endif %}">
+    <body class="fill-screen" data-bs-theme="{% if dark_mode %}dark{% else %}light{% endif %}">
         {% block content %}{% endblock %}
     </body>
         {% block embedded %}
